# Axiom

./: .editorconfig  .env.example  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  ci-check.sh  commitlint.config.js  docker-compose.prod.yml  docker-compose.yml  k8s-deploy.sh  setup-env.sh
api/: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  createsuperuser.py  docker-compose.yml  entrypoint.sh  flake8_no_serializer_all.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup_members.py
api/accounts/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
api/accounts/migrations/: 0001_initial.py  0002_remove_institution_unique.py  0003_add_overdraft_limit.py  0004_add_deleted_by.py  0005_alter_account_deleted_by.py
api/admin_panel/: admin.py  apps.py  defaults.py  models.py  serializers.py  urls.py  views.py
api/admin_panel/migrations/: 0001_initial.py
api/agents/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
api/agents/agents/: budget_agent.py  finance_agent.py  financial_agent.py  (+7 more)
api/ai_assistant/: __init__.py  admin.py  apps.py  config.py  models.py  urls.py  views.py
api/app/: audit.py  base_views.py  celery.py  config.py  encryption.py  export_utils.py  health.py  ip_utils.py  metrics.py  middleware.py  models.py  permissions.py  settings.py  settings_mypy.py  storage.py  throttles.py  urls.py  views.py
api/authentication/: cookie_auth.py  middleware.py  models.py  throttles.py  urls.py  views.py
api/bank_reconciliation/: apps.py  models.py  parsers.py  serializers.py  services.py  urls.py  views.py
api/budgets/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
api/credit_cards/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
api/dashboard/: urls.py  views.py
api/exchange_rates/: admin.py  apps.py  models.py  tasks.py  urls.py  views.py
api/expenses/: admin.py  apps.py  filters.py  models.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
api/loans/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
api/members/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
api/notifications/: admin.py  apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
api/payables/: __init__.py  admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
api/personal_planning/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
api/receivables/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
api/revenues/: admin.py  apps.py  filters.py  models.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
api/scripts/: backup.sh  migrate_codexdb.py  migrate_streamfort.py  rekey-backups.sh  verify-backup.sh
api/security/: __init__.py  importers.py  models.py  serializers.py  urls.py  vault_config.py  vault_crypto.py  views.py
api/tests/: test_accounts.py  test_agents.py  test_agents_vectorize.py  test_archive_upload.py  test_archives.py  test_auth_password_email.py  test_auth_registration.py  test_bank_reconciliation.py  test_book_file_and_goal_coverage.py  test_budgets_coverage.py  test_budgets_enforcement.py  test_coverage_boost.py  test_coverage_extra.py  test_dashboard_security_extra.py  test_embedding_signals.py  test_encryption.py  test_expenses_coverage.py  test_expenses_export_streaming.py  test_final_coverage.py  test_health.py  test_instance_generator.py  test_intellect.py  test_ip_utils.py  test_library_extra.py  test_linked_financial_goal.py  test_members_auth_views.py  test_missing_coverage.py  test_models.py  test_notification_preferences.py  test_notifications.py  test_permission_integration.py  test_permissions.py  test_planning_extra.py  test_planning_improvements.py  test_purge_deleted_records.py  test_rotate_encryption_key.py  test_security_headers.py  test_security_improvements.py  test_security_views.py  test_serializers.py  (+11 more)
api/transfers/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
api/vaults/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
api/webhooks/: admin.py  dispatch.py  models.py  serializers.py  tasks.py  urls.py  views.py
(+773 files in other folders)
