[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "axiom-api-checks"
version = "1.0.0"
description = "Local flake8 plugins for Axiom API"

[project.entry-points."flake8.extension"]
DRF = "flake8_no_serializer_all:NoSerializerAllChecker"

[tool.black]
line-length = 79
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 79
skip = [".venv", "venv", "migrations", ".git"]
known_django = ["django", "rest_framework"]
known_first_party = [
    "app",
    "authentication",
    "accounts",
    "admin_panel",
    "budgets",
    "credit_cards",
    "expenses",
    "exchange_rates",
    "revenues",
    "loans",
    "members",
    "notifications",
    "transfers",
    "dashboard",
    "security",
    "library",
    "personal_planning",
    "payables",
    "receivables",
    "vaults",
    "agents",
    "bank_reconciliation",
    "webhooks",
]
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "app.settings"
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__pycache__/*",
    "manage.py",
    "*/wsgi.py",
    "*/asgi.py",
    # Management commands are operational scripts tested via integration/manual runs
    "*/management/commands/*",
    # Type-checking configuration — not runtime code
    "app/settings_mypy.py",
    # Root-level setup scripts
    "setup_members.py",
    "createsuperuser.py",
    # New modules without tests yet
    "agents/agents/*",
    "agents/tools/*",
    "agents/core/llm_client.py",
    "admin_panel/views.py",
    # Infrastructure/operational modules — not unit-testable
    "app/metrics.py",
    "app/celery.py",
    "app/storage.py",
    # Celery background tasks — require a Celery worker; not unit-testable
    "*/tasks.py",
    # Development/tooling files — not application code
    "flake8_no_serializer_all.py",
]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.11"
plugins = ["mypy_django_plugin.main"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
exclude = ["migrations", "tests", "scripts"]

[tool.django-stubs]
django_settings_module = "app.settings_mypy"

[[tool.mypy.overrides]]
module = [
    "django_filters.*",
    "corsheaders.*",
    "anthropic",
    "anthropic.*",
    "celery",
    "celery.*",
    "drf_spectacular.*",
    "pythonjsonlogger.*",
    "django_prometheus.*",
    "django_redis.*",
    "storages.*",
    "dateparser.*",
    "boto3.*",
    "botocore.*",
    "rest_framework_simplejwt.*",
    "requests",
    "requests.*",
    "psycopg2",
    "psycopg2.*",
    "mysql",
    "mysql.*",
    "prometheus_client",
    "bank_reconciliation",
    "bank_reconciliation.*",
    "qrcode",
    "qrcode.*",
]
ignore_missing_imports = true

# Existing codebase: relax strict annotation requirements.
# Add type annotations incrementally going forward.
[[tool.mypy.overrides]]
module = [
    "agents",
    "agents.*",
    "budgets",
    "budgets.*",
    "credit_cards",
    "credit_cards.*",
    "dashboard",
    "dashboard.*",
    "expenses",
    "expenses.*",
    "library",
    "library.*",
    "loans",
    "loans.*",
    "manage",
    "members",
    "members.*",
    "notifications",
    "notifications.*",
    "payables",
    "payables.*",
    "personal_planning",
    "personal_planning.*",
    "revenues",
    "revenues.*",
    "scripts",
    "scripts.*",
    "security",
    "security.*",
    "transfers",
    "transfers.*",
    "vaults",
    "vaults.*",
    "bank_reconciliation",
    "bank_reconciliation.*",
    "receivables",
    "receivables.*",
    "reportlab",
    "reportlab.*"
]
disallow_untyped_defs = false
warn_return_any = false

[tool.bandit]
skips = ["B608"]
